# cargo-add-dynamic

./: .dir-locals.el  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clean.sh  test.sh
scripts/: install.sh  test.sh
src/: consts.rs  core.rs  lib.rs  main.rs  opts.rs
