[package]
name = "cargo-add-dynamic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = "3.2.20"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tracing = { version = "0.1.36", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-tree = "0.2.1"
