[package]
name = "cargo-add-dynamic"
version = "0.1.1"
categories = ["development-tools"]
edition = "2021"
exclude = [".dir-locals.el", "scripts/"]
homepage = "https://github.com/rksm/cargo-add-dynamic"
keywords = ["cargo"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rksm/cargo-add-dynamic"
description = " Cargo-add command to make dependencies into dylibs."

[dependencies]
anyhow = "1.0.64"
clap = "3.2.20"
toml_edit = "0.14.4"
tracing = { version = "0.1.36", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
